roles/ansible-rpi-k8s-cluster/ansible-rpi-k8s-cluster/deployments/traefik.yaml
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    app: traefik-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress-controller
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
    spec:
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - key: "node-role.kubernetes.io/master"
        effect: NoSchedule
      serviceAccountName: traefik-ingress-controller
      containers:
      - image: traefik
        imagePullPolicy: IfNotPresent
        name: traefik-ingress-controller
        resources:
          limits:
            memory: 50Mi
          requests:
            cpu: 200m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
          # hostPort: 80
        - name: https
          containerPort: 443
          # hostPort: 443
        args:
        - --configfile=/etc/traefik/traefik.toml
        - --web=false
        volumeMounts:
        - name: traefik-cfg
          mountPath: /etc/traefik/traefik.toml
      volumes:
      - name: traefik-cfg
        configMap:
          name: traefik-cfg
