roles/ansible-rpi-k8s-cluster/ansible-rpi-k8s-cluster/deployments/glusterfs.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.100.1
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 192.168.100.128
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 192.168.100.129
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 192.168.100.130
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 192.168.100.131
    ports:
      - port: 1
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: kube-system
subsets:
  - addresses:
      - ip: 192.168.100.1
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 192.168.100.128
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 192.168.100.129
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 192.168.100.130
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 192.168.100.131
    ports:
      - port: 1
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
spec:
  ports:
    - port: 1
