roles/ansible-rpi-k8s-cluster/ansible-rpi-k8s-cluster/deployments/nginx_deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: demo
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: demo
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: nginx-demo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo
  namespace: demo
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /demo
            backend:
              serviceName: nginx-demo
              servicePort: 80
